Updates to header component

--- a/src/app/core/components/landing/landing.component.html
+++ b/src/app/core/components/landing/landing.component.html
@@ -219,7 +219,7 @@
 
 
 
-	<div class="h-screen pb-14 bg-right bg-cover" style="background-image:url('bg.svg');">
+	<div class="h-screen pb-14 bg-right bg-cover" >
 		<!--Nav-->
 		<!-- <div class="w-full container mx-auto p-6">
 
@@ -266,7 +266,9 @@
 				<p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left slide-in-bottom-subtitle">
 					Pay your medical bills as easy installments. Quick and simple.</p>
 
-
+				<button type="button"
+					class="slide-in-bottom text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-2 m-2  md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Get
+					started</button>
 
 			</div>
 
