Updates to design

--- a/src/app/core/components/landing/landing.component.html
+++ b/src/app/core/components/landing/landing.component.html
@@ -221,19 +221,25 @@
 
 	<div class="h-screen pb-14 bg-right bg-cover" >
 		<!--Nav-->
-		<!-- <div class="w-full container mx-auto p-6">
+		<div class="w-full container mx-auto p-6">
 
 			<div class="w-full flex items-center justify-between">
 				<a class="flex items-center text-indigo-400 no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
 					href="#">
-					<svg class="h-8 fill-current text-indigo-600 pr-2" xmlns="http://www.w3.org/2000/svg"
+					<!-- <svg class="h-8 fill-current text-indigo-600 pr-2" xmlns="http://www.w3.org/2000/svg"
 						viewBox="0 0 20 20">
 						<path
 							d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm-5.6-4.29a9.95 9.95 0 0 1 11.2 0 8 8 0 1 0-11.2 0zm6.12-7.64l3.02-3.02 1.41 1.41-3.02 3.02a2 2 0 1 1-1.41-1.41z" />
-					</svg> APP
+					</svg> APP -->
+
+					<a href="" class="flex items-center">
+						<!-- <img #chosenSearch src="https://w7.pngwing.com/pngs/590/717/png-transparent-medicine-medical-purple-violet-logo.png" class="h-8 mr-3" alt="Flowbite Logo"> -->
+						<span class="self-center text-4xl font-semibold whitespace-nowrap dark:text-violet-800">Medipay</span>
+					  </a>
+
 				</a>
 
-				<div class="flex w-1/2 justify-end content-center">
+				<!-- <div class="flex w-1/2 justify-end content-center">
 					<a class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4"
 						data-tippy-content="@twitter_handle" href="https://twitter.com/intent/tweet?url=#">
 						<svg class="fill-current h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
@@ -249,32 +255,37 @@
 							</path>
 						</svg>
 					</a>
-				</div>
+				</div> -->
 
 			</div>
 
-		</div> -->
+		</div>
 
 		<!--Main-->
 		<div class="container pt-24 md:pt-48 px-6 mx-auto flex flex-wrap flex-col md:flex-row items-center">
 
 			<!--Left Col-->
 			<div class="flex flex-col w-full xl:w-2/5 justify-center lg:items-start overflow-y-hidden">
-				<h1
+				<h1 tabindex="0"
 					class="my-4 text-3xl md:text-5xl text-purple-800 font-bold leading-tight text-center md:text-left slide-in-bottom-h1">
 					Make your medical payments easy.</h1>
 				<p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left slide-in-bottom-subtitle">
 					Pay your medical bills as easy installments. Quick and simple.</p>
 
 				<button type="button"
-					class="slide-in-bottom text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-2 m-2  md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Get
-					started</button>
+					class="slide-in-bottom text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none
+					 focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-0 m-2  mb-4
+					 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</button>
+
+					 <p class="leading-normal text-base md:text-sm mb-8 text-center md:text-left slide-in-bottom-subtitle">
+						Dont have an account? Register</p>
+
 
 			</div>
 
 			<!--Right Col-->
-			<div class="w-full xl:w-3/5 py-6 overflow-y-hidden">
-				<img class="w-5/6 mx-auto lg:mr-0 slide-in-bottom" src="../../../../assets/images/medical_landing.svg">
+			<div class="w-full xl:w-3/5 py-1 overflow-y-hidden">
+				<img class="w-4/6 mx-auto lg:mr-0 slide-in-bottom" alt="landing img" src="../../../../assets/images/medical_landing.svg">
 			</div>
 			<!-- <button type="button"
 				class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Get
