--- a/src/app/core/components/landing/landing.component.html
+++ b/src/app/core/components/landing/landing.component.html
@@ -272,15 +272,18 @@
 				<p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left slide-in-bottom-subtitle">
 					Pay your medical bills as easy installments. Quick and simple.</p>
 
-				<button type="button"
+				<button (click)="login()" type="button"
 					class="slide-in-bottom text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none
 					 focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-0 m-2  mb-4
 					 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</button>
 
-					 <p class="leading-normal text-base md:text-sm mb-8 text-center md:text-left slide-in-bottom-subtitle">
-						Dont have an account? Register</p>
+					 <p (click)="register()"  class="text-sm font-light text-gray-500 dark:text-gray-400">
+						Don’t have an account yet? <a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
+					</p>
 
 
+
+						
 			</div>
 
 			<!--Right Col-->
