--- a/src/app/core/components/landing/landing.component.html
+++ b/src/app/core/components/landing/landing.component.html
@@ -234,7 +234,8 @@
 
 					<a href="" class="flex items-center">
 						<!-- <img #chosenSearch src="https://w7.pngwing.com/pngs/590/717/png-transparent-medicine-medical-purple-violet-logo.png" class="h-8 mr-3" alt="Flowbite Logo"> -->
-						<span class="self-center text-4xl font-semibold whitespace-nowrap dark:text-violet-800">Medipay</span>
+						<img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg">
+						<span class="self-center text-4xl font-semibold whitespace-nowrap text-violet-800">Medipay</span>
 					  </a>
 
 				</a>
@@ -277,13 +278,10 @@
 					 focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-0 m-2  mb-4
 					 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</button>
 
-					 <p (click)="register()"  class="text-sm font-light text-gray-500 dark:text-gray-400">
-						Don’t have an account yet? <a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
-					</p>
+					 <p class="leading-normal text-base md:text-sm mb-8 text-center md:text-left slide-in-bottom-subtitle">
+						Dont have an account? Register</p>
 
 
-
-						
 			</div>
 
 			<!--Right Col-->
