--- a/src/app/core/components/landing/landing.component.html
+++ b/src/app/core/components/landing/landing.component.html
@@ -278,8 +278,8 @@
 					 focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-0 m-2  mb-4
 					 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</button>
 
-					 <p class="leading-normal text-base md:text-sm mb-8 text-center md:text-left slide-in-bottom-subtitle">
-						Dont have an account? Register</p>
+					<p class="text-sm font-light text-gray-500 dark:text-gray-400">
+                      Don’t have an account yet? <a (click)="register()" class="cursor-pointer font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
 
 
 			</div>
