--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -29,7 +29,15 @@
                       </div>
                       <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>
                   </div>
-                  <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign in</button>
+
+                <!-- text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none
+                  focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-0 m-2  mb-4
+                  md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 -->
+
+                  <button type="submit" class="w-full text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none
+                  focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 
+                  dark:focus:ring-primary-800">Sign in</button>
+                  
                   <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                       Don’t have an account yet? <a (click)="register()" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
                   </p>
