--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -34,7 +34,7 @@
                           <input id="terms" aria-describedby="terms" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" required="">
                         </div>
                         <div class="ml-3 text-sm">
-                          <label for="terms" class="font-light text-gray-500 dark:text-gray-300">I accept the <a class="font-medium text-primary-600 hover:underline dark:text-primary-500" >Terms and Conditions</a></label>
+                          <label (click)="showTandC=true" for="terms" class="font-light text-gray-500 dark:text-gray-300">I accept the <a class="font-medium text-primary-600 hover:underline dark:text-primary-500" >Terms and Conditions</a></label>
                         </div>
                     </div>
                     <button type="submit" class="w-full text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none
@@ -54,4 +54,4 @@
   </section>
 
 
-  <app-termsandconditions></app-termsandconditions>
+  <app-termsandconditions *ngIf="showTandC"  (selectedValue)="checkValue($event)" ></app-termsandconditions>
