--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,7 +9,9 @@
               <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl ">
                   Sign in to your account
               </h1>
-              <form class="space-y-4 md:space-y-6" action="#">
+
+
+              <form class="space-y-4 md:space-y-6" (ngSubmit)="login()" >
                   <div>
                       <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Your email</label>
                       <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required="">
@@ -21,7 +23,7 @@
                   <div class="flex items-center justify-between">
                       <div class="flex items-start">
                           <div class="flex items-center h-5">
-                            <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 " required="">
+                            <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 " >
                           </div>
                           <div class="ml-3 text-sm">
                             <label for="remember" class="text-gray-500">Remember me</label>
@@ -30,11 +32,8 @@
                       <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>
                   </div>
 
-                <!-- text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none
-                  focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-0 m-2  mb-4
-                  md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 -->
-
-                  <button type="submit" class="w-full text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none
+               
+                  <button  type="submit" class="w-full text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none
                   focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 
                   dark:focus:ring-primary-800">Sign in</button>
                   
@@ -42,6 +41,8 @@
                       Don’t have an account yet? <a (click)="register()" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
                   </p>
               </form>
+
+
           </div>
       </div>
   </div>
