--- a/src/app/core/components/landing/landing.component.html
+++ b/src/app/core/components/landing/landing.component.html
@@ -1,246 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>
+      Tailwind Starter Template - App Landing Page Template: Tailwind Toolbox
+    </title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Tailwind Starter Template - App Landing Page Template: Tailwind Toolbox</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
+    />
 
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700"
+      rel="stylesheet"
+    />
 
+    <!-- Animation CSS-->
+    <style>
+      body {
+        overflow: hidden;
+      }
 
-	<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      .slide-in-bottom {
+        -webkit-animation: slide-in-bottom 0.5s
+          cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+        animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+          both;
+      }
 
+      .slide-in-bottom-h1 {
+        -webkit-animation: slide-in-bottom 0.5s
+          cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
+        animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+          0.5s both;
+      }
 
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+      .slide-in-bottom-subtitle {
+        -webkit-animation: slide-in-bottom 0.5s
+          cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.75s both;
+        animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+          0.75s both;
+      }
 
-	<!-- Animation CSS-->
-	<style>
-		.slide-in-bottom {
-			-webkit-animation: slide-in-bottom .5s cubic-bezier(.25, .46, .45, .94) both;
-			animation: slide-in-bottom .5s cubic-bezier(.25, .46, .45, .94) both
-		}
+      .fade-in {
+        -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) 1s
+          both;
+        animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) 1s both;
+      }
 
-		.slide-in-bottom-h1 {
-			-webkit-animation: slide-in-bottom .5s cubic-bezier(.25, .46, .45, .94) .5s both;
-			animation: slide-in-bottom .5s cubic-bezier(.25, .46, .45, .94) .5s both
-		}
+      .bounce-top-icons {
+        -webkit-animation: bounce-top 0.9s 1s both;
+        animation: bounce-top 0.9s 1s both;
+      }
 
-		.slide-in-bottom-subtitle {
-			-webkit-animation: slide-in-bottom .5s cubic-bezier(.25, .46, .45, .94) .75s both;
-			animation: slide-in-bottom .5s cubic-bezier(.25, .46, .45, .94) .75s both
-		}
+      @-webkit-keyframes slide-in-bottom {
+        0% {
+          -webkit-transform: translateY(1000px);
+          transform: translateY(1000px);
+          opacity: 0;
+        }
 
-		.fade-in {
-			-webkit-animation: fade-in 1.2s cubic-bezier(.39, .575, .565, 1.000) 1s both;
-			animation: fade-in 1.2s cubic-bezier(.39, .575, .565, 1.000) 1s both
-		}
+        100% {
+          -webkit-transform: translateY(0);
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
 
-		.bounce-top-icons {
-			-webkit-animation: bounce-top .9s 1s both;
-			animation: bounce-top .9s 1s both
-		}
+      @keyframes slide-in-bottom {
+        0% {
+          -webkit-transform: translateY(1000px);
+          transform: translateY(1000px);
+          opacity: 0;
+        }
 
-		@-webkit-keyframes slide-in-bottom {
-			0% {
-				-webkit-transform: translateY(1000px);
-				transform: translateY(1000px);
-				opacity: 0
-			}
+        100% {
+          -webkit-transform: translateY(0);
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
 
-			100% {
-				-webkit-transform: translateY(0);
-				transform: translateY(0);
-				opacity: 1
-			}
-		}
+      @-webkit-keyframes bounce-top {
+        0% {
+          -webkit-transform: translateY(-45px);
+          transform: translateY(-45px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+          opacity: 1;
+        }
 
-		@keyframes slide-in-bottom {
-			0% {
-				-webkit-transform: translateY(1000px);
-				transform: translateY(1000px);
-				opacity: 0
-			}
+        24% {
+          opacity: 1;
+        }
 
-			100% {
-				-webkit-transform: translateY(0);
-				transform: translateY(0);
-				opacity: 1
-			}
-		}
+        40% {
+          -webkit-transform: translateY(-24px);
+          transform: translateY(-24px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+        }
 
-		@-webkit-keyframes bounce-top {
-			0% {
-				-webkit-transform: translateY(-45px);
-				transform: translateY(-45px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in;
-				opacity: 1
-			}
+        65% {
+          -webkit-transform: translateY(-12px);
+          transform: translateY(-12px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+        }
 
-			24% {
-				opacity: 1
-			}
+        82% {
+          -webkit-transform: translateY(-6px);
+          transform: translateY(-6px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+        }
 
-			40% {
-				-webkit-transform: translateY(-24px);
-				transform: translateY(-24px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in
-			}
+        93% {
+          -webkit-transform: translateY(-4px);
+          transform: translateY(-4px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+        }
 
-			65% {
-				-webkit-transform: translateY(-12px);
-				transform: translateY(-12px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in
-			}
+        25%,
+        55%,
+        75%,
+        87% {
+          -webkit-transform: translateY(0);
+          transform: translateY(0);
+          -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+        }
 
-			82% {
-				-webkit-transform: translateY(-6px);
-				transform: translateY(-6px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in
-			}
+        100% {
+          -webkit-transform: translateY(0);
+          transform: translateY(0);
+          -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+          opacity: 1;
+        }
+      }
 
-			93% {
-				-webkit-transform: translateY(-4px);
-				transform: translateY(-4px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in
-			}
+      @keyframes bounce-top {
+        0% {
+          -webkit-transform: translateY(-45px);
+          transform: translateY(-45px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+          opacity: 1;
+        }
 
-			25%,
-			55%,
-			75%,
-			87% {
-				-webkit-transform: translateY(0);
-				transform: translateY(0);
-				-webkit-animation-timing-function: ease-out;
-				animation-timing-function: ease-out
-			}
+        24% {
+          opacity: 1;
+        }
 
-			100% {
-				-webkit-transform: translateY(0);
-				transform: translateY(0);
-				-webkit-animation-timing-function: ease-out;
-				animation-timing-function: ease-out;
-				opacity: 1
-			}
-		}
+        40% {
+          -webkit-transform: translateY(-24px);
+          transform: translateY(-24px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+        }
 
-		@keyframes bounce-top {
-			0% {
-				-webkit-transform: translateY(-45px);
-				transform: translateY(-45px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in;
-				opacity: 1
-			}
+        65% {
+          -webkit-transform: translateY(-12px);
+          transform: translateY(-12px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+        }
 
-			24% {
-				opacity: 1
-			}
+        82% {
+          -webkit-transform: translateY(-6px);
+          transform: translateY(-6px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+        }
 
-			40% {
-				-webkit-transform: translateY(-24px);
-				transform: translateY(-24px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in
-			}
+        93% {
+          -webkit-transform: translateY(-4px);
+          transform: translateY(-4px);
+          -webkit-animation-timing-function: ease-in;
+          animation-timing-function: ease-in;
+        }
 
-			65% {
-				-webkit-transform: translateY(-12px);
-				transform: translateY(-12px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in
-			}
+        25%,
+        55%,
+        75%,
+        87% {
+          -webkit-transform: translateY(0);
+          transform: translateY(0);
+          -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+        }
 
-			82% {
-				-webkit-transform: translateY(-6px);
-				transform: translateY(-6px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in
-			}
+        100% {
+          -webkit-transform: translateY(0);
+          transform: translateY(0);
+          -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+          opacity: 1;
+        }
+      }
 
-			93% {
-				-webkit-transform: translateY(-4px);
-				transform: translateY(-4px);
-				-webkit-animation-timing-function: ease-in;
-				animation-timing-function: ease-in
-			}
+      @-webkit-keyframes fade-in {
+        0% {
+          opacity: 0;
+        }
 
-			25%,
-			55%,
-			75%,
-			87% {
-				-webkit-transform: translateY(0);
-				transform: translateY(0);
-				-webkit-animation-timing-function: ease-out;
-				animation-timing-function: ease-out
-			}
+        100% {
+          opacity: 1;
+        }
+      }
 
-			100% {
-				-webkit-transform: translateY(0);
-				transform: translateY(0);
-				-webkit-animation-timing-function: ease-out;
-				animation-timing-function: ease-out;
-				opacity: 1
-			}
-		}
+      @keyframes fade-in {
+        0% {
+          opacity: 0;
+        }
 
-		@-webkit-keyframes fade-in {
-			0% {
-				opacity: 0
-			}
+        100% {
+          opacity: 1;
+        }
+      }
+    </style>
+  </head>
 
-			100% {
-				opacity: 1
-			}
-		}
-
-		@keyframes fade-in {
-			0% {
-				opacity: 0
-			}
-
-			100% {
-				opacity: 1
-			}
-		}
-	</style>
-
-</head>
-
-
-<body class="leading-normal tracking-normal text-gray-900" style="font-family: 'Source Sans Pro', sans-serif;">
-
-
-
-	<div class="h-screen pb-14 bg-right bg-cover" >
-		<!--Nav-->
-		<div class="w-full container mx-auto p-6">
-
-			<div class="w-full flex items-center justify-between">
-				<a class="flex items-center text-indigo-400 no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
-					href="#">
-					<!-- <svg class="h-8 fill-current text-indigo-600 pr-2" xmlns="http://www.w3.org/2000/svg"
+  <body
+    class="leading-normal tracking-normal text-gray-900"
+    style="font-family: 'Source Sans Pro', sans-serif"
+  >
+    <div class="h-screen pb-14 bg-right bg-cover">
+      <!--Nav-->
+      <div class="w-full container mx-auto p-6">
+        <div class="w-full flex items-center justify-between">
+          <a
+            href="#"
+            class="flex items-center text-indigo-400 no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
+          >
+            <!-- <svg class="h-8 fill-current text-indigo-600 pr-2" xmlns="http://www.w3.org/2000/svg"
 						viewBox="0 0 20 20">
 						<path
 							d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm-5.6-4.29a9.95 9.95 0 0 1 11.2 0 8 8 0 1 0-11.2 0zm6.12-7.64l3.02-3.02 1.41 1.41-3.02 3.02a2 2 0 1 1-1.41-1.41z" />
 					</svg> APP -->
 
-					<a href="" class="flex items-center">
-						<!-- <img #chosenSearch src="https://w7.pngwing.com/pngs/590/717/png-transparent-medicine-medical-purple-violet-logo.png" class="h-8 mr-3" alt="Flowbite Logo"> -->
-						<img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg">
-						<span class="self-center text-4xl font-semibold whitespace-nowrap text-violet-800">Medipay</span>
-					  </a>
+            <a href="" class="flex items-center" tabindex="-1" #medipayLogo>
+              <!-- <img #chosenSearch src="https://w7.pngwing.com/pngs/590/717/png-transparent-medicine-medical-purple-violet-logo.png" class="h-8 mr-3" alt="Flowbite Logo"> -->
+              <img
+                class="w-8 h-8 mr-2"
+                src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
+              />
+              <span
+                class="self-center text-4xl font-semibold whitespace-nowrap text-violet-800"
+                >Medipay</span
+              >
+            </a>
+          </a>
 
-				</a>
-
-				<!-- <div class="flex w-1/2 justify-end content-center">
+          <!-- <div class="flex w-1/2 justify-end content-center">
 					<a class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4"
 						data-tippy-content="@twitter_handle" href="https://twitter.com/intent/tweet?url=#">
 						<svg class="fill-current h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
@@ -257,51 +279,81 @@
 						</svg>
 					</a>
 				</div> -->
+        </div>
+      </div>
+      <div #focusElement tabindex="-1"></div>
+      <!--Main-->
+      <div
+        class="container pt-24 md:pt-48 px-6 mx-auto flex flex-wrap flex-col md:flex-row items-center"
+      >
+        <!--Left Col-->
+        <div
+          class="flex flex-col w-full xl:w-2/5 justify-center lg:items-start overflow-y-hidden"
+        >
+          <h1
+            #pageTitle
+            id="pageTitle"
+            tabindex="1"
+            class="my-4 text-3xl md:text-5xl text-purple-800 font-bold leading-tight text-center md:text-left slide-in-bottom-h1"
+          >
+            Make your medical payments easy.
+          </h1>
 
-			</div>
+          <p
+            #paragraph
+            tabindex="2"
+            class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left slide-in-bottom-subtitle"
+          >
+            Pay your medical bills as easy installments. Quick and simple.
+          </p>
 
-		</div>
+          <button
+            #loginButton
+            (click)="login()"
+            type="button"
+            tabindex="3"
+            class="slide-in-bottom text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-0 m-2 mb-4 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          >
+            Login
+          </button>
 
-		<!--Main-->
-		<div class="container pt-24 md:pt-48 px-6 mx-auto flex flex-wrap flex-col md:flex-row items-center">
-
-			<!--Left Col-->
-			<div class="flex flex-col w-full xl:w-2/5 justify-center lg:items-start overflow-y-hidden">
-				<h1 tabindex="0"
-					class="my-4 text-3xl md:text-5xl text-purple-800 font-bold leading-tight text-center md:text-left slide-in-bottom-h1">
-					Make your medical payments easy.</h1>
-				<p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left slide-in-bottom-subtitle">
-					Pay your medical bills as easy installments. Quick and simple.</p>
-
-				<button (click)="login()" type="button"
-					class="slide-in-bottom text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none
-					 focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 ml-0 m-2  mb-4
-					 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</button>
-
-					<p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                      Don’t have an account yet? <a (click)="register()" class="cursor-pointer font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
-
-
-			</div>
-
-			<!--Right Col-->
-			<div class="w-full xl:w-3/5 py-1 overflow-y-hidden">
-				<img class="w-4/6 mx-auto lg:mr-0 slide-in-bottom" alt="landing img" src="../../../../assets/images/medical_landing.svg">
-			</div>
-			<!-- <button type="button"
+          <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+            Don't have an account yet?
+            <a
+              #signupLink
+              tabindex="4"
+              (click)="register()"
+              (keyup.enter)="register()"
+              class="cursor-pointer font-medium text-primary-600 hover:underline dark:text-primary-500"
+              >Signup</a
+            >.
+          </p>
+        </div>
+        <!--Right Col-->
+        <div class="w-full xl:w-3/5 py-1 overflow-y-hidden">
+          <img
+            #image
+            tabindex="5"
+            class="w-4/6 mx-auto lg:mr-0 slide-in-bottom"
+            alt="Decorative image: Medical professional discussing payments"
+            src="../../../../assets/images/medical_landing.svg"
+          />
+        </div>
+        <!-- <button type="button"
 				class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Get
 				started</button> -->
 
-			<!--Footer-->
-			<div class="w-full pt-16 pb-6 text-sm text-center md:text-left fade-in">
-				<a class="text-gray-500 no-underline hover:no-underline" href="#">&copy; App 2023</a>
-			</div>
-		</div>
-
-
-	</div>
-
-
-</body>
-
+        <!--Footer-->
+        <div class="w-full pt-16 pb-6 text-sm text-center md:text-left fade-in">
+          <a
+            #copyright
+            class="text-gray-500 no-underline hover:no-underline"
+            href="#"
+            tabindex="6"
+            >&copy; App 2023</a
+          >
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
