add alt text for medipay logo image

--- a/src/app/core/components/landing/landing.component.html
+++ b/src/app/core/components/landing/landing.component.html
@@ -254,6 +254,7 @@
               <img
                 class="w-8 h-8 mr-2"
                 src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
+                alt="logo"
               />
               <span
                 class="self-center text-4xl font-semibold whitespace-nowrap text-violet-800"
