--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -226,48 +226,7 @@
                 </p>
               </div>
             </div>
-            <div class="md:w-1/2 md:ml-3">
-              <div class="mb-3">
-                <label
-                  for="date-of-birth"
-                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  >Date of Birth</label
-                >
-                <input
-                  #dateOfBirth
-                  type="date"
-                  name="date-of-birth"
-                  formControlName="date-of-birth"
-                  id="date-of-birth"
-                  class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  required
-                  tabindex="6"
-                  aria-describedby="date-of-birth-error"
-                />
-                <p
-                  *ngIf="
-                    registerForm.get('date-of-birth')?.invalid && submitted
-                  "
-                  class="block mb-2 text-sm font-medium text-red-600"
-                  id="date-of-birth-error"
-                  aria-live="assertive"
-                >
-                  <ng-container
-                    *ngIf="
-                      registerForm.get('date-of-birth')?.hasError('required')
-                    "
-                  >
-                    Date of Birth is required.
-                  </ng-container>
-                  <ng-container
-                    *ngIf="
-                      registerForm.get('date-of-birth')?.hasError('invalidDate')
-                    "
-                  >
-                    Enter a valid date of birth.
-                  </ng-container>
-                </p>
-              </div>
+            <div class="sm:mr-3 md:w-1/2 md:ml-3">
               <div class="mb-3">
                 <label
                   for="address"
@@ -278,11 +237,11 @@
                   #address
                   formControlName="address"
                   id="address"
-                  placeholder="Your Street, Your City, Your Country"
+                  placeholder="Enter your complete address including your street, your city and your country"
                   rows="5"
                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   required
-                  tabindex="7"
+                  tabindex="10"
                   aria-describedby="address-error"
                   aria-labelledby="address-sr"
                 ></textarea>
@@ -313,7 +272,7 @@
                   placeholder="(123)-456-7890"
                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   required=""
-                  tabindex="8"
+                  tabindex="11"
                   aria-describedby="phone-number-error"
                 />
 
@@ -345,24 +304,29 @@
           <div class="md:w-1/2 md:pr-3">
             <div class="mb-3 flex items-start">
               <div class="flex items-center h-5">
-                <input
-                  #termsError
-                  id="terms"
-                  formControlName="terms"
-                  aria-describedby="terms-error"
-                  type="checkbox"
-                  class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                  required=""
-                  tabindex="9"
-                />
+                <label for="terms">
+                  <input
+                    #termsError
+                    id="terms"
+                    formControlName="terms"
+                    aria-label="I accept the Terms and Conditions"
+                    aria-describedby="terms-error"
+                    type="checkbox"
+                    class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
+                    required=""
+                    tabindex="12"
+                  />
+                </label>
               </div>
               <div class="ml-3 text-sm">
                 I accept the
                 <a
                   href="#"
-                  (click)="openTermsAndConditionsModal(); $event.preventDefault()"
+                  (click)="
+                    openTermsAndConditionsModal(); $event.preventDefault()
+                  "
                   class="font-light text-gray-500 dark:text-gray-300"
-                  tabindex="10"
+                  tabindex="13"
                   aria-haspopup="true"
                   role="button"
                 >
@@ -383,8 +347,9 @@
               </div>
             </div>
             <button
+              id="signUpBtn"
               type="submit"
-              tabindex="11"
+              tabindex="14"
               class="w-full mb-3 text-white bg-purple-800 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-6 py-4 rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
             >
               Sign Up
@@ -396,6 +361,7 @@
                 (click)="login()"
                 class="font-medium text-primary-600 cursor-pointer hover:underline dark:text-primary-500"
                 tabindex="0"
+                (keydown.enter)="login()"
                 >Login here</a
               >
             </p>
