--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,5 @@
 @import "tailwindcss/components";
 
 @import "tailwindcss/utilities";
-html, body { height: 100%; }
+html, body { min-height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
