--- a/src/app/core/components/card/card.component.html
+++ b/src/app/core/components/card/card.component.html
@@ -1,144 +1,182 @@
 <div class="flex justify-center items-center min-h-screen w-screen bg-blue-50">
     <div class="h-auto w-96 bg-white p-12 rounded-lg">
-        <button
-            (click)="close()"
-            type="button"
-            class="ml-[100%] text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
-            data-modal-hide="defaultModal"
-            tabindex="1"
+      <button
+        (click)="close()"
+        type="button"
+        class="ml-[100%] text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+        data-modal-hide="defaultModal"
+        tabindex="1"
+      >
+        <svg
+          class="w-3 h-3"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 14 14"
         >
-            <svg
-                class="w-3 h-3"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 14 14"
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+          ></path>
+        </svg>
+        <span class="sr-only">Close modal</span>
+      </button>
+      <h3
+        class="text-xl m-3 text-center font-semibold"
+        id="cardTitle"
+        tabindex="0"
+        aria-live="polite"
+        aria-atomic="true"
+      >
+        Payment Details
+      </h3>
+      <form [formGroup]="paymentForm" (ngSubmit)="onPay()">
+        <div class="mt-6">
+          <div
+            class="input_text relative"
+            [ngClass]="{
+              'error': submitted && paymentForm.get('cardholderName')?.invalid
+            }"
+          >
+            <label for="cardholderName" class="font-semibold text-gray-800">Cardholder Name</label>
+            <input
+              type="text"
+              id="cardholderName"
+              class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
+              placeholder="John Doe"
+              formControlName="cardholderName"
+              aria-required="true"
+              tabindex="2"
+              aria-describedby="cardholderNameError cardholderNameLabel"
+            />
+            <i class="absolute left-2 top-4 text-gray-400 fa fa-user"></i>
+            <div
+              *ngIf="submitted && paymentForm.get('cardholderName')?.invalid"
+              class="error-message text-red-600"
+              id="cardholderNameError"
+              [attr.role]="'alert'"
+              [attr.aria-live]="'assertive'"
+              [attr.aria-atomic]="'true'"
             >
-                <path
-                    stroke="currentColor"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-                ></path>
-            </svg>
-            <span class="sr-only">Close modal</span>
-        </button>
-        <h3
-            class="text-xl m-3 text-center font-semibold"
-            id="cardTitle"
-            tabindex="0"
+              Cardholder name is required.
+            </div>
+          </div>
+        </div>
+        <div class="mt-8">
+          <div
+            class="input_text relative"
+            [ngClass]="{
+              'error': submitted && paymentForm.get('cardNumber')?.invalid
+            }"
+          >
+            <label for="cardNumber" class="font-semibold text-gray-800">Card Number</label>
+            <input
+              type="text"
+              id="cardNumber"
+              class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
+              placeholder="0000 0000 0000 0000"
+              formControlName="cardNumber"
+              aria-required="true"
+              maxlength="16"
+              tabindex="3"
+              aria-describedby="cardNumberError cardNumberLabel"
+            />
+            <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-credit-card"></i>
+            <div
+              *ngIf="submitted && paymentForm.get('cardNumber')?.invalid"
+              class="error-message text-red-600"
+              id="cardNumberError"
+              [attr.role]="'alert'"
+              [attr.aria-live]="'assertive'"
+              [attr.aria-atomic]="'true'"
+            >
+              Card number is required and should be 16 digits.
+            </div>
+          </div>
+        </div>
+        <div class="mt-8">
+          <div
+            class="input_text relative"
+            [ngClass]="{
+              'error': submitted && paymentForm.get('expiryDate')?.invalid
+            }"
+          >
+            <label for="expiryDate" class="font-semibold text-gray-800">Expiry Date</label>
+            <input
+              type="text"
+              id="expiryDate"
+              class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
+              placeholder="MM/YY"
+              formControlName="expiryDate"
+              aria-required="true"
+              tabindex="4"
+              aria-describedby="expiryDateError expiryDateLabel"
+            />
+            <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-calendar"></i>
+            <div
+              *ngIf="submitted && paymentForm.get('expiryDate')?.invalid"
+              class="error-message text-red-600"
+              id="expiryDateError"
+              [attr.role]="'alert'"
+              [attr.aria-live]="'assertive'"
+              [attr.aria-atomic]="'true'"
+            >
+              Expiry date is required.
+            </div>
+          </div>
+        </div>
+        <div class="mt-8">
+          <div
+            class="input_text relative"
+            [ngClass]="{
+              'error': submitted && paymentForm.get('cvv')?.invalid
+            }"
+          >
+            <label for="cvv" class="font-semibold text-gray-800">CVV</label>
+            <input
+              type="text"
+              id="cvv"
+              class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
+              placeholder="123"
+              formControlName="cvv"
+              aria-required="true"
+              maxlength="3"
+              tabindex="5"
+              aria-describedby="cvvError cvvLabel"
+            />
+            <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-lock"></i>
+            <div
+              *ngIf="submitted && paymentForm.get('cvv')?.invalid"
+              class="error-message text-red-600"
+              id="cvvError"
+              [attr.role]="'alert'"
+              [attr.aria-live]="'assertive'"
+              [attr.aria-atomic]="'true'"
+            >
+              CVV is required and should be 3 digits.
+            </div>
+          </div>
+        </div>
+        <p tabindex="6" class="text-lg text-center mt-4 text-gray-600 font-semibold">
+          Payment Amount: {{ selectedAmount }} $
+        </p>
+        <div class="flex justify-center mt-4">
+          <button
+            tabindex="7"
+            (click)="onPay()"
+            type="submit"
+            class="outline-none pay h-12 bg-orange-700 text-white mb-3 hover:bg-orange-700 rounded-lg w-1/2 cursor-pointer transition-all"
             aria-live="polite"
             aria-atomic="true"
-        >
-            Payment Details
-        </h3>
-        <form [formGroup]="paymentForm" (ngSubmit)="onPay()">
-            <div class="mt-6">
-                <div
-                    class="input_text relative"
-                    [ngClass]="{
-                        'error': paymentForm.get('cardholderName')?.invalid && paymentForm.get('cardholderName')?.touched
-                    }"
-                >
-                    <label for="cardholderName" class="font-semibold text-gray-800">Cardholder Name</label>
-                    <input
-                        type="text"
-                        id="cardholderName"
-                        class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
-                        placeholder="John Doe"
-                        formControlName="cardholderName"
-                        aria-required="true"
-                        tabindex="1"
-                        aria-describedby="cardholderNameError"
-                        #cardholderNameInput
-                    />
-                    <i class="absolute left-2 top-4 text-gray-400 fa fa-user"></i>
-                </div>
-                
-            </div>
-            <div class="mt-8">
-                <div
-                    class="input_text relative"
-                    [ngClass]="{
-                        'error': paymentForm.get('cardNumber')?.invalid && paymentForm.get('cardNumber')?.touched
-                    }"
-                >
-                    <label for="cardNumber" class="font-semibold text-gray-800">Card Number</label>
-                    <input
-                        type="text"
-                        id="cardNumber"
-                        class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
-                        placeholder="0000 0000 0000 0000"
-                        formControlName="cardNumber"
-                        aria-required="true"
-                        maxlength="16"
-                        tabindex="2"
-                        aria-describedby="cardNumberError"
-                        #cardNumberInput
-                    />
-                    <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-credit-card"></i>
-                </div>
-                
-            </div>
-            <div class="mt-8">
-                <div
-                    class="input_text relative"
-                    [ngClass]="{
-                        'error': paymentForm.get('expiryDate')?.invalid && paymentForm.get('expiryDate')?.touched
-                    }"
-                >
-                    <label for="expiryDate" class="font-semibold text-gray-800">Expiry Date</label>
-                    <input
-                        type="text"
-                        id="expiryDate"
-                        class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
-                        placeholder="MM/YY"
-                        formControlName="expiryDate"
-                        aria-required="true"
-                        tabindex="3"
-                        aria-describedby="expiryDateError"
-                        #expiryDateInput
-                    />
-                    <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-calendar"></i>
-                </div>
-                
-            </div>
-            <div class="mt-8">
-                <div
-                    class="input_text relative"
-                    [ngClass]="{
-                        'error': paymentForm.get('cvv')?.invalid && paymentForm.get('cvv')?.touched
-                    }"
-                >
-                    <label for="cvv" class="font-semibold text-gray-800">CVV</label>
-                    <input
-                        type="text"
-                        id="cvv"
-                        class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
-                        placeholder="123"
-                        formControlName="cvv"
-                        aria-required="true"
-                        maxlength="3"
-                        tabindex="4"
-                        aria-describedby="cvvError"
-                        #cvvInput
-                    />
-                    <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-lock"></i>
-                </div>
-                
-            </div>
-            <p tabindex="5" class="text-lg text-center mt-4 text-gray-600 font-semibold">
-                Payment Amount: {{ selectedAmount }} $
-            </p>
-            <div class="flex justify-center mt-4">
-                <button tabindex="6" (click)="onPay()"
-                    type="submit"
-                    class="outline-none pay h-12 bg-orange-700 text-white mb-3 hover:bg-orange-700 rounded-lg w-1/2 cursor-pointer transition-all"
-                >
-                    Pay
-                </button>
-            </div>
-        </form>
+          >
+            Pay
+          </button>
+        </div>
+      </form>
+      <div id="liveRegion" class="sr-only" aria-live="assertive" aria-atomic="true"></div>
     </div>
-</div>
+  </div>
+  
