fix buttons on success modal

--- a/src/app/core/components/card/success/success.component.html
+++ b/src/app/core/components/card/success/success.component.html
@@ -29,7 +29,7 @@
         </h5>
         <button
           type="button"
-          class="box-content rounded-none border-none hover:no-underline hover:opacity-75 focus:opacity-100 focus:shadow-none focus:outline-none"
+          class="box-content text-gray-500 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
           data-te-modal-dismiss
           aria-label="Close"
           (click)="onCloseModal()"
@@ -63,7 +63,7 @@
             ></i>
           </div>
           <p
-            class="text-center text-lg font-medium"
+            class="text-center text-lg font-medium text-gray-500"
             tabindex="2"
             aria-label="Thank you for your payment. Your transaction was successful."
           >
@@ -76,7 +76,7 @@
       >
         <button
           type="button"
-          class="inline-block rounded bg-primary-100 px-6 pb-2 pt-2.5 text-md font-medium uppercase leading-normal text-primary-700 transition duration-150 ease-in-out hover:bg-primary-accent-100 focus:bg-primary-accent-100 focus:outline-none focus:ring-0 active:bg-primary-accent-200"
+          class="inline-block  bg-primary-100 px-6 pb-2 pt-2.5 text-md  uppercase leading-normal text-primary-700 transition duration-150 ease-in-out hover:bg-primary-accent-100 focus:bg-primary-accent-100  active:bg-primary-accent-200 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
           data-te-modal-dismiss
           data-te-ripple-init
           data-te-ripple-color="light"
